syntax = "proto3";
package grpc_transporter;


message RequestVoteRequest {
    uint64 term = 1;
    string candidateName = 2;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool voteGranted = 2;
}

message HeartbeatRequest {
    uint64 term = 1;
    string name = 2;
}

message HeartbeatResponse {
    uint64 term = 1;
    bool success = 2;

}

service Transporter {
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
    rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
}